# VCFMIX

./: .gitignore  AUTHORS.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python_versions.yml
data/testdata/: .gitignore  e73b328d-e703-48e6-bad6-96dcb3f4a20a_v3_samtools.vcf
examples/: fmm_example.py  lineageScan_example.py
misc/: fmm_example.py  lineageScan_example.py  lineagescan_example.py  topup.sh
misc/unitTest_tmp/: 528.txt  52858be2-7020-4b7f-acb4-95e00019a7d7.txt
src/: fmm_example.py  picklist.sh  testpick.txt  transform.py  vcfScan.py
tests/: __init__.py  test_vcfScan.py
vcfmix/: __init__.py  vcfScan.py
