[metadata]
name = VCFMIX
version = file: VERSION
description = VCFMIX allows identification of, and quantification of mixtures of, high quality bases within VCF files. It is designed for use with reference mapped bacterial sequences.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexOrlek/VCXMIX
keywords = VCFMIX
license = GNU General Public License v3.0
classifiers = Development Status :: 3 - Alpha
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    biopython
    scipy
    numpy
    pandas
    tables
    pytest-runner
    pytest
